# math

./: .gitignore  pyproject.toml
math/algebra/: Algebra.ipynb
math/arithmetic/: Arithmetic.ipynb
