[tool.poetry]
name = "math"
version = "0.1.0"
description = ""
authors = ["Andrew Tanner <atanner@digitropic.com>"]
license = "GPLv3"

[tool.poetry.dependencies]
python = "3.9"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
jupyterlab = "^3.2.1"
scipy = "^1.7.1"
numpy = "^1.21.3"
sympy = "^1.9"
jupyter-book = "^0.12.0"
black = "^21.10b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
